fix: removed gap for multi toolbar compact mode

--- a/modules/border.css
+++ b/modules/border.css
@@ -219,6 +219,44 @@ body > hbox {
    }
 }
 
+:root:not([zen-single-toolbar="true"])[zen-compact-mode="true"]:not([customizing]) {
+  /* Credits to CompTechGuy */
+  
+  /* TODO: ADD HIDE PREF FOR MULTI TOOLBAR TOPBAR !!! */
+  
+/*   #zen-appcontent-navbar-wrapper {
+	  min-height: 0.1px !important;
+		height: 0.1px !important;
+    transition: 0.18s ease !important;
+	}
+
+	#zen-appcontent-navbar-wrapper[zen-has-hover="true"] {
+	  height: 34px !important;
+	} */
+  
+  --zen-element-separation: 0px !important;
+  
+  @media not (-moz-pref("wireframe.urlbar.position.top")){
+    #zen-tabbox-wrapper,
+    #tabbox-browser,
+    #tabbox-browser > *
+    {
+      border-top-left-radius: var(--na-window-border-radius) !important;
+      border-top-right-radius: var(--na-window-border-radius) !important;
+    }
+  }
+  
+    @media (-moz-pref("wireframe.urlbar.position.top")){
+    #zen-tabbox-wrapper,
+    #tabbox-browser,
+    #tabbox-browser > *
+    {
+      border-bottom-left-radius: var(--na-window-border-radius) !important;
+      border-bottom-right-radius: var(--na-window-border-radius) !important;
+    }
+  }
+}
+
 /* === Webview Border Radius Pref === */
 @media (-moz-pref("wireframe.webview.border_radius", 0)) {
   :root {
